[package]
name = "picorv32-rt"
version = "0.6.0"
repository = "https://github.com/ilya-epifanov/picorv32-rt"
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>", "The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "no-std"]
description = "Minimal runtime / startup for PicoRV32 RISC-V CPU"
keywords = ["riscv", "runtime", "startup"]
license = "ISC"
edition = "2018"

[dependencies]
r0 = "0.2.2"
picorv32 = "0.1.4"
picorv32-rt-macros = { path = "macros", version = "0.1.5" }

[features]
default = ["compressed-isa"]
inline-asm = [] # No longer used but left for backwards compatibility
const-fn = ["picorv32/const-fn"]
compressed-isa = []
interrupts = []
interrupts-qregs = ["interrupts"]

[workspace]
members = [
  "macros",
]
